--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,15 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweet-container.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script type="text/javascript" src="/scripts/tweet-container.js"></script>
   </head>
 
   <body>
@@ -42,22 +45,24 @@
 
     </nav>
 
-    <header>
-      <div>
-          <img src="/images/profile-hex.png">
-      </div>
-      <br>
-      <div>
-          <h2>Your Name</h2>
-      </div>
-    </header>
+    <section id="primary-header">
+      <header>
+        <div>
+            <img src="/images/profile-hex.png">
+        </div>
+        <br>
+        <div>
+            <h2>Your Name</h2>
+        </div>
+      </header>
+    </section>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
 
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form>
+        <form id="tweet-form">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
           <div class="button-counter">
@@ -65,6 +70,30 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
+      </section>
+
+      <section id="tweets-container">
+        <article>
+          <header>
+            <span id="icon-name">
+              <i class="fa-solid fa-user"></i>
+              name
+            </span>
+            <span id="account">account </span>
+          </header>
+          <div class="content">
+            stuffstuffstuff
+          </div>
+          <footer>
+            <span>date</span>
+            <span id="icons">
+              <i class="fa-solid fa-heart"></i>
+              <i class="fa-solid fa-flag"></i>
+              <i class="fa-solid fa-repeat"></i>
+            </span>
+
+          </footer>
+        </article>
       </section>
 
     </main>
