--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <head>
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+
 
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
@@ -18,9 +20,10 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/tweet-container.css" type="text/css" />
     <link rel="stylesheet" href="/styles/footer.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweet-form.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweet-container.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/responsive-design.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -50,40 +53,36 @@
 
     </nav>
 
-    <section >
-      <header id="primary-header">
-        <div>
-            <img src="/images/profile-hex.png">
-        </div>
-        <br>
-        <div>
-            <h2>Your Name</h2>
-        </div>
-      </header>
-    </section>
-
     <!-- Page-specific (main) content here -->
     <main class="container">
 
-      <section class="new-tweet">
-        <div id="error-popup">
-          &#9888
-          <span id="error-message"> </span>
-          &#9888
-        </div>
-        <form id="tweet-form">
-          <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
-          <div class="button-counter">
-            <button type="submit" id="submit-button">Tweet</button>
-            <output name="counter" class="counter" for="tweet-text">140</output>
+
+      <header id="primary-header">
+        <img src="/images/profile-hex.png">
+        <h2>Your Name</h2>
+      </header>
+
+      <section>
+        <div class="new-tweet">
+          <div id="error-popup">
+            &#9888 &nbsp &#9888 &nbsp
+            <span id="error-message"> </span>
+            &nbsp &#9888 &nbsp &#9888
           </div>
-        </form>
+          <form id="tweet-form">
+            <label for="tweet-text">What are you humming about?</label>
+            <textarea name="text" id="tweet-text"></textarea>
+            <div class="button-counter">
+              <button type="submit" id="submit-button">Tweet</button>
+              <output name="counter" class="counter" for="tweet-text">140</output>
+            </div>
+          </form>
+        </div>
+
+        <div id="tweets-container">
+        </div>
       </section>
 
-      <section id="tweets-container">
-
-      </section>
 
     </main>
 
